--- a/catalog.html
+++ b/catalog.html
@@ -18,8 +18,8 @@
             <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
           </label>
         </form>
-        <a class="user-bookmarks" href="blank.html">Закладки</a>
-        <a class="user-store-basket basket-active" href="blank.html">Корзина</a>
+        <a class="user-bookmarks" href="blank.html">Закладки: 0</a>
+        <a class="user-store-basket basket-active" href="blank.html">Корзина: 0</a>
         <a class="checkout-main-panel" href="#">Оформить заказ</a>
       </div>  
     </section>
@@ -35,23 +35,23 @@
           <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
-          <div class="authorization-registration-disable">
-            <button class="log-in" type="button">Войти</button>
-            <button class="registration" type="button">Регистрация</button>
-          </div>
-          <div class="account-info-on">
-            <div class="wrap-accout-info">
-              <a class="user-panel-login" href="blank.html" aria-label="Кнопка перехода к профилю">
-              Равшан Джамшутович
-              </a>
-              <a class="user-panel-logout" href="blank.html" aria-label="Кнопка дефвторизации">
-              </a>
+            <div class="authorization-registration-disable">
+              <button class="log-in" type="button">Войти</button>
+              <button class="registration" type="button">Регистрация</button>
             </div>
-            <div class="wrapper-account-panel">
-              <a class="my-orders h-color" href="blank.html">Мои заказы</a>
-              <a class="personal-area h-color" href="blank.html">Личный кабинет</a>
+            <div class="account-info-on">
+              <div class="wrap-accout-info">
+                <a class="user-panel-login" href="blank.html" aria-label="Кнопка перехода к профилю">
+                Равшан Джамшутович
+                </a>
+                <a class="user-panel-logout" href="blank.html" aria-label="Кнопка дефвторизации">
+                </a>
+              </div>
+              <div class="wrapper-account-panel">
+                <a class="my-orders h-color" href="blank.html">Мои заказы</a>
+                <a class="personal-area h-color" href="blank.html">Личный кабинет</a>
+              </div>
             </div>
-          </div>
         </div> 
       </div>
     </div>
@@ -75,12 +75,12 @@
       <section class="bread-crumbs">
         <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
         <ul class="ul-style list-link-crumbs">
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="catalog.html">Перфораторы</a></li>
+          <li><a class="catalog-link-crumbs" href="catalog.html">Каталог</a></li>
+          <li><a class="tool-link-crumbs" href="blank.html">Инструмент</a></li>
+          <li><a class="hammer-link-crumbs" href="catalog.html">Перфораторы</a></li>
         </ul>
       </section>
-      <h1 class="sections-headline h-color">Перфораторы</h1>
+      <h1 class="sections-headline h-color sections-headline-catalog">Перфораторы</h1>
       <div class="wrap-content">
         <section class="filter">
           <h2>Фильтр:</h2>
@@ -105,7 +105,7 @@
                   </input>
                 </div>
               </fieldset>
-              <fieldset class="fieldset-wrap">
+              <fieldset class="fieldset-wrap fieldset-manufact">
                 <legend>Производители:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
@@ -130,9 +130,9 @@
                   </li>
                 </ul>
               </fieldset>
-              <fieldset class="fieldset-wrap">
+              <fieldset class="fieldset-wrap fieldset-power">
                 <legend>Питание:</legend>
-                <ul class="ul-style list-manufacturers">
+                <ul class="ul-style list-manufacturers fieldset-power-list">
                   <li>
                     <input class="input-background visually-hidden" id ="accum" type="radio" name="power_supply" value="rechargeable" checked>
                     <label class="label-radio" for="accum">Аккумуляторные</label>
@@ -307,8 +307,8 @@
     <div class="wrap-about-rotary">
       <section class="about-rotary container">
         <h2 class="sections-headline head-about">Пара слов о перфораторах</h2>
-        <p class="about-perf">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+        <p class="about-perf">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br> 
           В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
     </div> 
