--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
           </label>
         </form>
         <a class="user-bookmarks" href="blank.html">Закладки: 0</a>
-        <a class="user-store-basket basket-active" href="blank.html">Корзина: 0</a>
+        <a class="user-store-basket basket-active" href="blank.html">Корзина: 10</a>
         <a class="checkout-main-panel" href="#">Оформить заказ</a>
       </div>  
     </section>
@@ -109,11 +109,11 @@
                 <legend>Производители:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
-                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked>
+                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked disabled>
                     <label class="label-checkbox" for="Bosch">Bosch</label>
                   </li>
                   <li>
-                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол">
+                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол" disabled>
                     <label class="label-checkbox" for="interskol">Интерскол</label>
                   </li>
                   <li>
@@ -149,9 +149,9 @@
         <section class="sorting">
           <h2>Сортировка:</h2>
           <div class="wrap-sorting">
-            <p class="sortinf-price sortinf-price-active">По цене</p>
-            <p class="sorting-type">По типу</p>
-            <p class="sortinf-function">По функционалу</p>
+            <a href="#" class="sortinf-price sortinf-price-active" aria-label="Сортировка по цене">По цене</a>
+            <a href="#" class="sorting-type" aria-label="Сортировка по типу">По типу</a>
+            <a href="#" class="sortinf-function" aria-label="Сортировка по функционалу">По функционалу</a>
             <button class="sorting-button-up" type="button" aria-label="Кнопка сортировки вверх">
               <svg class="sorting-icon sorting-icon-active" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                 <path fill="#231F20" d="M5.5 10L0 0h11"/>
@@ -296,10 +296,10 @@
         <section class="page-navigation">
           <h2 class="visually-hidden">Навигация по страницам</h2>
           <ul class="ul-page-nav">
-            <li><a href="#"></a>1</li>
-            <li><a href="#"></a>2</li>
-            <li><a href="#"></a>3</li>
-            <li><a href="#"></a>Следующая</li>
+            <li><a class="page-link page-navigation-active" href="#" aria-label="Первая страница каталога">1</a></li>
+            <li><a class="page-link" href="#" aria-label="Вторая страница каталога">2</a></li>
+            <li><a class="page-link" href="#" aria-label="Третья страница каталога">3</a></li>
+            <li><a class="page-link" href="#" aria-label="Следующая страница каталога">Следующая</a></li>
           </ul>
         </section>
       </div>
@@ -357,12 +357,17 @@
       </section>
     </div>
   </footer>
-  <section class="store-basket">
-    <h2 class="visually-hidden">Корзина</h2>
-    <p>Товар добавлен в корзину!</p>
-    <a href="blank.html">Оформить заказ</a>
-    <button class="continius-order" type="button">Продолжить покупки</button>
-    <button class="order-close" type="button" aria-label="Закрыть окно корзины">Закрыть</button>
+  <section class="store-basket hide">
+    <div class="wrap-store-basket">
+      <h2 class="visually-hidden">Корзина</h2>
+      <p>Товар добавлен в корзину!</p>
+      <div class="wrap-store-button">
+        <a class="compl-store" href="blank.html">Оформить заказ</a>
+        <button class="continius-order" type="button">Продолжить покупки</button>
+      </div>
+      <button class="order-close" type="button" aria-label="Закрыть окно корзины"></button>
+    </div>
   </section>
+  <script src="js/script2.js"></script>
 </body>
 </html>
