--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           </div>
           <div class="wrap-input-text">
             <label for="your-message">Текст письма:</label>
-            <textarea class="input-text" name="content_letter" id="your-message" placeholder="В свободной форме"></textarea>
+            <textarea class="input-text" name="content-letter" id="your-message" placeholder="В свободной форме"></textarea>
           </div>
           <div class="wrap-feed-back">
             <button class="feed-back-submit" type="submit">Отправить</button>
